# gettsim

./: .azure-pipelines.yaml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yml  Arbeitslosengeld-2-Familien.ipynb  CHANGES.md  CHANGES.rst  CITATION  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  Kinderfreibeträge Lösung.ipynb  MANIFEST.in  README.md  README.rst  Simulation-Copy1.ipynb  Simulation.ipynb  Untitled.ipynb  check_hypo.py  codecov.yml  descr.py  doc8.ini  environment.yaml  environment.yml  environment_jax.yml  hypo.py  imports.py  interactive.py  izamod.py  load_data.py  meta.yaml  prepare_data.py  pyproject.toml  pytest.ini  readme.md  readme.txt  release.py  (+11 more)
.conda/: meta.yaml  release.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature_request.md  question.md  yearly_param_update.md
.github/workflows/: continuous-integration-workflow.yaml  continuous-integration-workflow.yml  main.yaml  publish-to-pypi.yaml
dashboard/: Instructions.md  pre_processing_data.py
dashboard/app/: main.py
data/applications/: form_idsc_EVS.docx  form_idsc_TPP.docx  form_idsc_basid.docx  form_idsc_pass.docx  form_idsc_siab.docx
data/params/: mw_pensions.json  param.xls.REMOVED.git-id
data_not_implemented/: arbeitsl_geld_2.yaml  arbeitsl_hilfe.yaml  eink_st.yaml  eink_st_abzuege.yaml  ges_renten_vers.yaml  soz_vers_beitr.yaml  unterhalt.yaml  wohngeld.yaml
development/: integrate_out.ipynb  patch_function.ipynb
doc/: index.rst
docs/: 10_minutes.ipynb  changes.md  code_restrictions.md  conf.py  crosswalk.rst  developer_index.rst  functions.rst  geps.md  geps.rst  getting-started.rst  gettsim_objects_index.rst  glossary.md  glossary.rst  how-to-contribute.rst  how-to-maintain.rst  index.md  index.rst  installation.md  installation.rst  params.rst  rtd_environment.yml  types.rst  variables.rst
docs/functions/: arbeitsl_v_rentenv.rst  eink_grenzen.rst  index.rst  krankenv_pflegev.rst
docs/geps/: gep-00.md  gep-00.rst  gep-01.md  gep-01.rst  gep-02-prototype-structure.rst  gep-02.md  gep-02.rst  gep-03.md  gep-03.rst  gep-04-contribution.rst  gep-04.md  gep-04.rst  gep-05.md  gep-05.rst  gep-06-restructuring-taxes.md  gep-06-restructuring.ipynb  gep-06.md  gep-template.rst  gep-x.md  gep-x.rst  index.rst
docs/gettsim_developer/: code-restrictions.md  geps.rst  hh_concepts.md  hh_examples.yaml  how-to-contribute.md  how-to-contribute.rst  how-to-maintain.md  how-to-maintain.rst  index.md  index.rst
docs/gettsim_objects/: functions.md  functions.rst  index.md  index.rst  input_variables.md  input_variables.rst  interface.md  interface.rst  means_testing.md  means_testing.rst  params.md  params.rst  types.rst  variables.rst  variables_out.md  variables_out.rst
docs/how_to_guides/: calculating_elterngeld.ipynb  different_ways_to_load_policy_functions.ipynb  disable_rounding.ipynb  how_to_load_policy_functions.ipynb  index.md  index.rst  visualizing_the_system.ipynb
docs/tutorials/: 2p_0c.csv  2p_1c.csv  2p_2c.csv  advanced_interface.ipynb  advanced_usage.ipynb  basic_interface.ipynb  basic_usage.ipynb  changing_the_policy_environment.ipynb  debugging.ipynb  example.ipynb  functions.ipynb  household_data.csv  household_data_favorability.csv  household_data_kinderbonus_alg2  household_data_kindergeld.csv  index.md  index.rst  installation.rst  interface-for-subset-of-gettsim.ipynb  interface.ipynb  parameters.ipynb  policy_functions.ipynb  user_functions.ipynb  visualize.ipynb  visualizing_the_system.ipynb
gettsim/: __init__.py  _numpy.py  aggregation.py  aggregation_jax.py  aggregation_numpy.py  apply_tax_funcs.py  auxiliary.py  calc_e_anr_frei.py  checks.py  config.py  dag.py  demographic_vars.py  dynamic_function_generation.py  func_out_columns.py  functions.py  functions_loader.py  generic_functions.py  hypo.py  incomes.py  interface.py  jax.py  pensions.py  piecewise_functions.py  policy_environment.py  policy_for_date.py  renten_anspr.py  renten_anspruch_dag.py  shared.py  social_insurance.py  soz_vers.py  syntethic.py  synthetic.py  tax_transfer.py  test_generic_funcions.py  typing.py  verfügb_eink.py  visualization.py
gettsim/benefits/: alg2.py  arbeitsl_geld.py  arbeitsl_geld_2.py  arbeitsl_geld_2_dag.py  arbeitsl_geld_dag.py  arbeitslosengeld.py  benefit_checks.py  benefit_checks_dag.py  elterngeld.py  elterngeld_dag.py  kinderzuschlag.py  kinderzuschlag_dag.py  kiz.py  unterhalt.py  unterhalt_dag.py  unterhaltsvorschuss.py  wohngeld.py  wohngeld_dag.py
gettsim/dashboard/: Instructions.md  Instructions.txt  all_data.pickle
gettsim/data/: abgelt_st.yaml  arbeitsl_geld.yaml  arbeitsl_geld_2  arbeitsl_geld_2.yaml  arbeitsl_geld_2_neu.yaml  arbeitsl_geld_2_old.yaml  arbeitsl_hilfe.yaml  bedarfsgemeinschaften.yaml  e_st.yaml  e_st_abzuege.yaml  eink_st.yaml  eink_st_abzuege.yaml  elterngeld.yaml  erziehungsgeld.yaml  ges_renten_vers.yaml  grv_ep.xlsx  kindergeld.yaml  kinderzuschlag.yaml  mw_pensions.json  mw_st.yaml  param.xls  param.yaml  paramviz.py  pension_data.yaml  pensions.xlsx  soli_st.yaml  soz_vers_beitr.yaml  (+7 more)
lit/: Jessen (2017) - three welfare-increasing reforms for GER.pdf.REMOVED.git-id
pre-waf/: check_hypo.py  descr.py  hypo.py  imports.py  interactive.py  izamod.py  load_data.py  output.py  prepare_data.py  readme.md  settings.py  tax_transfer.py  tax_transfer_ubi.py  tt_list.py
src/: wscript
tests/: __init__.py  auxiliary_test.py  test_aggregation_functions.py  test_arbeitsl_geld.py  test_arbeitsl_geld_2.py  test_dfs_ssc.xlsx  test_dfs_tax_test.xlsx  test_dfs_wg.xlsx  test_dfs_zve.xlsx  test_docs.py  test_elterngeld.py  test_favorability_check.py  test_functions_loader.py  test_grunds_im_alter.py  test_interface.py  test_kindergeld.py  test_kinderzuschl.py  test_naming_conventions.py  test_policy_environment.py  test_renten_anspr.py  test_rounding.py  test_synthetic.py  test_tax_transfer.py  test_unterhalt.py  test_visualizations.py  test_vorsorgeaufw.py  test_wohngeld.py
tutorial/: Minimal example.ipynb
(+6577 files in other folders)
