[metadata]
name = gettsim
description = The German Taxes and Transfers SIMulator
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/iza-institute-of-labor-economics/gettsim
author = The GETTSIM team
author_email = gaudecker@iza.org
license = AGPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    License :: OSI Approved :: GNU General Public License v3 License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = ["Economics", "Taxes and Transfers", "Germany"],
project_urls =
    Changelog = https://github.com/iza-institute-of-labor-economics/gettsim/docs/changes.rst
    Documentation = https://gettsim.readthedocs.io
    Github = https://github.com/iza-institute-of-labor-economics/gettsim
    Tracker = https://github.com/iza-institute-of-labor-economics/gettsim/issues

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/_gettsim/_version.py

[doc8]
max-line-length = 88
ignore = D002, D004
