[metadata]
name = gettsim
description = The German Taxes and Transfers SIMulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iza-institute-of-labor-economics/gettsim
author = The GETTSIM team
author_email = gaudecker@iza.org
license = AGPL-3.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    Economics
    Taxes
    Benefits
    Transfers
    Pensions
    Germany
project_urls =
    Changelog = https://gettsim.readthedocs.io/en/stable/changes.html
    Documentation = https://gettsim.readthedocs.io
    Github = https://github.com/iza-institute-of-labor-economics/gettsim
    Tracker = https://github.com/iza-institute-of-labor-economics/gettsim/issues

[options]
packages = find:
install_requires =
    astor
    dags
    ipywidgets
    networkx
    numpy
    numpy-groupies
    pandas
    plotly
    pygments
    pygraphviz
    pytest
    pyyaml
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/_gettsim/_version.py

[doc8]
max-line-length = 88
ignore = D002, D004
