[metadata]
# No equivalent, covered by classifiers
platforms = unix, linux, osx, cygwin, win32

[options]
# Automatic discovery should work for the src-layout automatically
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout
packages = find:
package_dir =
    =src
# Our lower bound is 3.11 now
python_requires = >=3.9
# True by default when using pyproject.toml project metadata/config.
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
include_package_data = True
# Obsolete - only relevant for pkg_resources, easy_install and setup.py install in the context of eggs (deprecated).
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
zip_safe = False

[options.packages.find]
# Automatic discovery should work for the src-layout automatically
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout
where = src
